--- a/src/Pages/wizard/index.css
+++ b/src/Pages/wizard/index.css
@@ -49,7 +49,7 @@
 }
 /* index file css  */
 .steps_container .progress_container {
-  border: solid 1px #336699;
+  border: solid 2px black;
   background-color: #ffffff;
 }
 .steps_container .progress_container .progress {
@@ -64,11 +64,11 @@
 }
 .steps_container .form_container label {
   font-size: 15px;
-  padding: 0px 0px 0px 15px;
+  /* padding: 0px 0px 0px 15px; */
   font-weight: 600;
 }
 .steps_container .form_container input {
-  border: 1px solid #336699 !important;
+  /* border: 1px solid #336699 !important; */
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -78,7 +78,7 @@
   background-color: #ffffff;
 }
 .steps_container .right_side .background_image {
-  background-image: url('../../assets/wizardImages/photo-1-2@3x.png');
+  background-image: url("../../assets/wizardImages/photo-1-2@3x.png");
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -119,13 +119,76 @@
 }
 /* screen 2a css */
 .steps_container .left_side_box_contaier {
-  border: solid 1px #336699;
+  border: solid 1px #000;
   background-color: #ffffff;
   cursor: pointer;
 }
 .activeDiv {
-  background-color: #f5f5f5 !important;
+  background-color: #336699 !important;
+  color: white;
+}
+.activeDiv img {
+  filter: brightness(6.9);
 }
 /* .steps_container .left_side_box_contaier img {
     height: 60px;
   } */
+
+/* custom wizard styles */
+.custom-progress {
+  padding: 8px 0px !important;
+  background-color: #1ba358 !important;
+}
+.custom-input {
+  padding: 10px 10px;
+  border-radius: 10px;
+  width: 105% !important;
+  border: 1px solid #ababab !important;
+}
+.custom-submit {
+  margin-left: auto;
+  background-color: #336699 !important;
+  border-color: #336699 !important;
+}
+.submit-container {
+  width: 70% !important;
+}
+.custom-botton-color {
+  background-color: #336699 !important;
+  border-color: #336699 !important;
+}
+.custom-wizard-icon-container {
+  padding-inline: 2rem;
+  height: 110px;
+  border-radius: 5px;
+}
+.wizard-icon {
+  width: 50px !important;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: unset !important;
+}
+
+.w_30p {
+  width: 30% !important;
+}
+
+.custom-p {
+  font-weight: 600;
+  color: inherit !important;
+  line-height: 15px;
+}
+.custom-placeHolder {
+  background: url("../../assets/images/cash_new.png");
+  background-size: 7% 48%;
+  background-repeat: no-repeat;
+  text-indent: 20px;
+  background-position: 3% 50%;
+}
+
+.p_1_7{
+  padding-inline: 1.7rem;
+}
+.font_500{
+  font-weight: 500 !important;
+}
