--- a/src/Pages/wizard/index.css
+++ b/src/Pages/wizard/index.css
@@ -179,16 +179,16 @@
   line-height: 15px;
 }
 .custom-placeHolder {
-  background: url("../../assets/images/cash_new.png");
+  background: url("../../assets/images/placeHolderImage.png");
   background-size: 7% 48%;
   background-repeat: no-repeat;
   text-indent: 20px;
   background-position: 3% 50%;
 }
 
-.p_1_7{
+.p_1_7 {
   padding-inline: 1.7rem;
 }
-.font_500{
+.font_500 {
   font-weight: 500 !important;
 }
