--- a/src/Pages/Listings/Listings.css
+++ b/src/Pages/Listings/Listings.css
@@ -72,7 +72,8 @@ select {
 
 .sec-tittle {
   position: relative;
-  padding-bottom: 40px;
+  /* padding-bottom: 40px; */
+  padding: 97px 7px;
 }
 
 .sec-tittle h2 {
@@ -178,7 +179,7 @@ select {
 
 .form-search {
   position: relative;
-  margin: 0;
+  margin: 34px 0;
   padding: 40px 20px;
   box-shadow: 0.278px 1.981px 8px rgba(0, 0, 0, 0.06);
   background-color: #ffffff;
