--- a/src/Pages/PropertyView/PropertyView.css
+++ b/src/Pages/PropertyView/PropertyView.css
@@ -345,7 +345,8 @@ select {
 
 .slider-form-sec {
     position: relative;
-    padding: 70px 0 0px;
+    /* padding: 70px 0 0px; */
+    padding: 125px 0 0px;
         overflow: hidden;
         border-bottom: 1px solid #e1e1e1;
 }
@@ -540,7 +541,7 @@ select {
 
 .home-detail-area {
     position: relative;
-    padding: 50px 0 0;
+    padding: 98px 0 0;
 }
 
 .home-detail-area ul {
